--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ and open the template in the editor.
     <body>
         <div class="wraper">
             <div class="container">
-                dfgfdgfgdfg
+                <h3 style="text-align: center;">Mizanur Rahman</h3>
             </div>
         </div>
         
