Modify image tag

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 
 		<!-- Container (Portfolio Section) -->
 		<div id="portfolio" class="container-fluid text-center bg-grey">
-		  <h2>Product & Involvement</h2><br>
+		  <h2>Product and Involvement</h2><br>
 		  <div class="row text-center slideanim">
 			<div class="col-sm-4">
 			  <div class="thumbnail">
-				<img src="product01.jpg" alt="Hospital Management LABS" width="400" height="400">
+				<img src="product01.jpg" alt="Hospital Management LABS" width="400" height="300">
 				<p><strong>Hospital Management LABS</strong></p>
 			  </div>
 			</div>
@@ -117,7 +117,7 @@
 			</div>
 			<div class="col-sm-4">
 			  <div class="thumbnail">
-				<img src="product02.jpg" alt="Hospital Management ITIS" width="400" height="400">
+				<img src="product02.jpg" alt="Hospital Management ITIS" width="400" height="300">
 				<p><strong>Hospital Management ITIS</strong></p>
 			  </div>
 			</div>
