modyfy index file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
 		  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-		  <link href="main.css" rel="stylesheet" type="text/css">
+		  <link href="resources/main.css" rel="stylesheet" type="text/css">
 		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
@@ -49,7 +49,7 @@
 			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>			  
 			</div>
 			<div class="col-sm-3">
-			  <img src="about01.jpg" alt="Office Image" height="100%" width="100%">
+			  <img src="resources/images/about01.jpg" alt="Office Image" height="100%" width="100%">
 			</div>
 		  </div>
 		</div>
@@ -57,7 +57,7 @@
 		<div class="container-fluid bg-grey">
 		  <div class="row">
 			<div class="col-sm-3">
-			  <img src="professions01.jpg" alt="Office Image" height="100%" width="100%">
+			  <img src="resources/images/professions01.jpg" alt="Office Image" height="100%" width="100%">
 			</div>
 			<div class="col-sm-9">
 			  <h2>Professions</h2><br>
@@ -105,19 +105,19 @@
 		  <div class="row text-center slideanim">
 			<div class="col-sm-4">
 			  <div class="thumbnail">
-				<img src="product01.jpg" alt="Hospital Management LABS" width="400" height="300">
+				<img src="resources/images/product01.jpg" alt="Hospital Management LABS" width="400" height="300">
 				<p><strong>Hospital Management LABS</strong></p>
 			  </div>
 			</div>
 			<div class="col-sm-4">
 			  <div class="thumbnail">
-				<img src="product03.png" alt="Transports Management" width="400" height="300">
+				<img src="resources/images/product03.png" alt="Transports Management" width="400" height="300">
 				<p><strong>Transports Management</strong></p>				
 			  </div>
 			</div>
 			<div class="col-sm-4">
 			  <div class="thumbnail">
-				<img src="product02.jpg" alt="Hospital Management ITIS" width="400" height="300">
+				<img src="resources/images/product02.jpg" alt="Hospital Management ITIS" width="400" height="300">
 				<p><strong>Hospital Management ITIS</strong></p>
 			  </div>
 			</div>
