--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 	<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-		<!--Navigation-->
+		<!--Navigation Bar-->
 		<nav class="navbar navbar-default navbar-fixed-top">
 		  <div class="container">
 			<div class="navbar-header">
