Modify index for changing contact info

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		  <!-- Theme Made By www.w3schools.com - No Copyright -->
-		  <title>Mizanur Rahman</title>
-		  <meta charset="utf-8">
-		  <meta name="viewport" content="width=device-width, initial-scale=1">
-		  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-		  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-		  <link href="resources/main.css" rel="stylesheet" type="text/css">
-		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<title>MIZAN</title>
+		<meta name="description" content="Personal Profile and Portfolio for Md. Mizanur Rahman"/>
+		<meta name="keywords" content="Md. Mizanur Rahman, Mizanur Rahman, Mizan, Mizanur, Rahman, Profile, Portfolio, Medical System Company Limited, Medisys, IDB-BISEW, Khatib Abdul Zahid School & College, Government Shaheed Bulbul College, Govt. Edward College, Dhaka College"/>
+		<meta name="author" content="Mizan"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+		<link href="resources/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 		<!--Navigation Bar-->
@@ -20,9 +20,9 @@
 			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>                        
+				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="#myPage">MIZAN</a>
+			  <a class="navbar-brand" href="#myPage">MD. MIZANUR RAHMAN</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 			  <ul class="nav navbar-nav navbar-right">
@@ -36,8 +36,8 @@
 		</nav>
 		
 		<div class="jumbotron text-center">
-		  <h1>Md. Mizanur Rahman</h1> 
-		  <p>Java Programmer</p>
+			<h1>MD. MIZANUR RAHMAN</h1> 
+			<p>Java Programmer</p>
 		</div>
 
 		<!-- Container (About Section) -->
@@ -45,8 +45,8 @@
 		  <div class="row">
 			<div class="col-sm-9">
 			  <h2>About</h2><br>
-			  <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>			  
+			  <h4>Working on it</h4><br>
+			  <p>Working on it</p>
 			</div>
 			<div class="col-sm-3">
 			  <img src="resources/images/about01.jpg" alt="Office Image" height="100%" width="100%">
@@ -61,16 +61,14 @@
 			</div>
 			<div class="col-sm-9">
 			  <h2>Professions</h2><br>
-			  <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-			  <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-			  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			</div>
+			  <h4>Working on it</h4><br>
+			  <p>Working on it</p>
+			  </div>
 		  </div>
 		  <div class="row">
 			<div class="col-sm-12">
-			  <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-			  <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-			  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			  <h4>Working on it</h4><br>
+			  <p>Working on it</p>
 			</div>
 		  </div>
 		</div>
@@ -83,17 +81,17 @@
 			<div class="col-sm-4">
 			  <span class="glyphicon glyphicon-off logo-small"></span>
 			  <h4>Web Design</h4>
-			  <p>Lorem ipsum dolor sit amet..</p>
+			  <p>Working on it</p>
 			</div>
 			<div class="col-sm-4">
 			  <span class="glyphicon glyphicon-heart logo-small"></span>
 			  <h4>Enterprise Application</h4>
-			  <p>Lorem ipsum dolor sit amet..</p>
+			  <p>Working on it</p>
 			</div>
 			<div class="col-sm-4">
 			  <span class="glyphicon glyphicon-lock logo-small"></span>
 			  <h4>Desktop Application</h4>
-			  <p>Lorem ipsum dolor sit amet..</p>
+			  <p>Working on it</p>
 			</div>
 		  </div>
 		  <br><br>
@@ -157,75 +155,47 @@
 		  </div>
 		</div>
 
-		<!-- Container (Contact Section) -->
+		<!-- Contact-->
 		<div id="contact" class="container-fluid bg-grey">
-		  <h2 class="text-center">CONTACT</h2>
-		  <div class="row">
-			<div class="col-sm-5">
-			  <p>Contact us and we'll get back to you within 24 hours.</p>
-			  <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-			  <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-			  <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+			<!-- Contact Section -->
+			<h2 class="text-center">CONTACT</h2>
+			<div class="row">
+				<div class="col-sm-6">
+					<p><span class="glyphicon glyphicon-phone"></span> +88 01725 400 435</p>
+					<p><span class="glyphicon glyphicon-envelope"></span> kmmizanurrahmanjp@gmail.com</p>
+				</div>
+				<div class="col-sm-6">
+					<p><span class="glyphicon glyphicon-phone"></span> +88 01725 400 435</p>
+					<p><span class="glyphicon glyphicon-envelope"></span> kmmizanurrahmanjp@gmail.com</p>
+				</div>
 			</div>
-			<div class="col-sm-7 slideanim">
-			  <div class="row">
-				<div class="col-sm-6 form-group">
-				  <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+			<!-- Footer Section -->
+			<div id="footer" class="container-fluid text-center">
+				<div class="row">
+					<div class="col-sm-12">
+						<a href="#myPage" title="To Top">
+							<span class="glyphicon glyphicon-chevron-up"></span>
+						</a>
+					</div>
 				</div>
-				<div class="col-sm-6 form-group">
-				  <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+				<div class="row">
+					<div class="col-sm-12">
+						<i class="fa fa-bitbucket-square" style="font-size:24px"></i>
+						<i class="fa fa-github-square" style="font-size:24px"></i>
+						<a href="https://www.facebook.com/kmmizanurrahmanjp"><i class="fa fa-facebook-square" style="font-size:24px"></i></a>
+						<i class="fa fa-youtube-square" style="font-size:24px"></i>
+						<i class="fa fa-twitter-square" style="font-size:24px"></i>
+						<i class="fa fa-stack-overflow" style="font-size:24px"></i>
+						<i class="fa fa-linkedin-square" style="font-size:24px"></i>
+						<i class="fa fa-instagram" style="font-size:24px"></i>
+						<i class="fa fa-google-plus-square" style="font-size:24px"></i>
+					</div>
 				</div>
-			  </div>
-			  <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-			  <div class="row">
-				<div class="col-sm-12 form-group">
-				  <button class="btn btn-default pull-right" type="submit">Send</button>
-				</div>
-			  </div>
 			</div>
-		  </div>
 		</div>
 
-
-		<footer class="container-fluid text-center">
-		  <a href="#myPage" title="To Top">
-			<span class="glyphicon glyphicon-chevron-up"></span>
-		  </a>
-		  <p>Profile Made By kmmizanurrahmanjp@gmail.com</p>
-		</footer>
-
-		<script>
-		$(document).ready(function(){
-		  // Add smooth scrolling to all links in navbar + footer link
-		  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
-			// Make sure this.hash has a value before overriding default behavior
-			if (this.hash !== "") {
-			  // Prevent default anchor click behavior
-			  event.preventDefault();
-			  // Store hash
-			  var hash = this.hash;
-			  // Using jQuery's animate() method to add smooth page scroll
-			  // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-			  $('html, body').animate({
-				scrollTop: $(hash).offset().top
-			  }, 900, function(){
-		   
-				// Add hash (#) to URL when done scrolling (default click behavior)
-				window.location.hash = hash;
-			  });
-			} // End if
-		  });
-		  
-		  $(window).scroll(function() {
-			$(".slideanim").each(function(){
-			  var pos = $(this).offset().top;
-			  var winTop = $(window).scrollTop();
-				if (pos < winTop + 600) {
-				  $(this).addClass("slide");
-				}
-			});
-		  });
-		})
-		</script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/js"></script>
+		<script src="resources/script.js" type="text/js"></script>
 	</body>
 </html>
