add about me img

--- a/index.html
+++ b/index.html
@@ -73,32 +73,35 @@
 		<!-- About-->
 		<div id="about" class="container-fluid about">
 			<!-- About Description -->
-			<h4>About Me</h4>
-			<div class=" container-fluid about_dis">
-				<p>
-					This is, <strong>Md. Mizanur Rahman</strong>, nick name <strong>Mizan</strong>, I am Java Programmer. 
-					My home district is <strong>Pabna Sadar, Pabna</strong> and now I am at <strong>Dhaka, Bangladesh</strong>. 
-					I have completed my post graduation in <strong>Physics</strong> from <strong>Dhaka College</strong> and accrue a <strong>OCJP</strong> vendor certification from <strong>Oracle Corporation</strong>. 
-					I am obesely heard working and self-motive person. 
-					By watching movies, traveling and visiting new places I spend my leisure time.
-				</p>
-				<p>
-					I know the programming language <strong>Java</strong>, <strong>JavaScript</strong>, <Strong>C</Strong>, <strong>C#</strong> and <strong>PHP</strong>; 
-					Java technology and framework <strong>Spring</strong>, <strong>PrimeFace</strong>, <strong>Struts</strong>, <strong>Swing</strong>, <strong>AWT</strong>, <strong>Servlet</strong>, <strong>JSP</strong>, <strong>JSTL</strong> and <strong>JSF</strong>; 
-					Font-end technology and framework <strong>HTML5</strong>, <strong>CSS3</strong>, <strong>jQuery</strong>, <strong>XML</strong>, <strong>Json</strong>, <strong>Ajax</strong>, <strong>AngularJs</strong>, <strong>ExtJs</strong> and <strong>Bootstrap</strong>; 
-					Data access Technologies <strong>JDBC</strong>, <strong>Hibernate</strong>, <strong>MyBatis</strong> and <strong>JPA2</strong>; 
-					Database <strong>Oracle</strong>(SQL, PL/SQL) and <strong>MySql</strong>; 
-					Server <strong>Apache Tomcat</strong>, <strong>Glassfish</strong> and <strong>XAMPP</strong>; 
-					IDE <strong>STS</strong>, <strong>Eclipse</strong>, <strong>NetBeans</strong> and <strong>Visual Studio Code</strong>.
-				</p>
-				<p>
-					I love to work on <strong>OOP</strong>. Now I am working on <strong>JavaEE</strong>, <strong>Spring Boot</strong>, <strong>JPA</strong>, <strong>MyBatis</strong>, <strong>Oracle</strong>,  <strong>AngularJs</strong>, <strong>ExtJs</strong>, <strong>HL7</strong> and <strong>IHE</strong>. 
-					I want to acquire knowledge at <strong>Python</strong>, <strong>NodeJs</strong>, <strong>Liquibase</strong>, <strong>Spring Web Flow</strong> and many other language and framework.
-				</p>
+			<h4 class="topic_heading">About Me</h4>
+			<div class="container-fluid about_dis">
+				<div class="about_dis_img"><img src="resources/images/about_me.jpg" height="100%" width="100%"/></div>
+				<div class="about_dis_p">
+					<p>
+						This is, <strong>Md. Mizanur Rahman</strong>, nick name <strong>Mizan</strong>, I am Java Programmer. 
+						My home district is <strong>Pabna Sadar, Pabna</strong> and now I am at <strong>Dhaka, Bangladesh</strong>. 
+						I have completed my post graduation in <strong>Physics</strong> from <strong>Dhaka College</strong> and accrue a <strong>OCJP</strong> vendor certification from <strong>Oracle Corporation</strong>. 
+						I am obesely heard working and self-motive person. 
+						By watching movies, traveling and visiting new places I spend my leisure time.
+					</p>
+					<p>
+						I know the programming language <strong>Java</strong>, <strong>JavaScript</strong>, <Strong>C</Strong>, <strong>C#</strong> and <strong>PHP</strong>; 
+						Java technology and framework <strong>Spring</strong>, <strong>PrimeFace</strong>, <strong>Struts</strong>, <strong>Swing</strong>, <strong>AWT</strong>, <strong>Servlet</strong>, <strong>JSP</strong>, <strong>JSTL</strong> and <strong>JSF</strong>; 
+						Font-end technology and framework <strong>HTML5</strong>, <strong>CSS3</strong>, <strong>jQuery</strong>, <strong>XML</strong>, <strong>Json</strong>, <strong>Ajax</strong>, <strong>AngularJs</strong>, <strong>ExtJs</strong> and <strong>Bootstrap</strong>; 
+						Data access Technologies <strong>JDBC</strong>, <strong>Hibernate</strong>, <strong>MyBatis</strong> and <strong>JPA2</strong>; 
+						Database <strong>Oracle</strong>(SQL, PL/SQL) and <strong>MySql</strong>; 
+						Server <strong>Apache Tomcat</strong>, <strong>Glassfish</strong> and <strong>XAMPP</strong>; 
+						IDE <strong>STS</strong>, <strong>Eclipse</strong>, <strong>NetBeans</strong> and <strong>Visual Studio Code</strong>.
+					</p>
+					<p>
+						I love to work on <strong>OOP</strong>. Now I am working on <strong>JavaEE</strong>, <strong>Spring Boot</strong>, <strong>JPA</strong>, <strong>MyBatis</strong>, <strong>Oracle</strong>,  <strong>AngularJs</strong>, <strong>ExtJs</strong>, <strong>HL7</strong> and <strong>IHE</strong>. 
+						I want to acquire knowledge at <strong>Python</strong>, <strong>NodeJs</strong>, <strong>Liquibase</strong>, <strong>Spring Web Flow</strong> and many other language and framework.
+					</p>
+				</div>
 			</div>
 			<!-- Experience -->
 			<div class="container-fluid experience">
-				<h4 id="total_expe"></h4>
+				<h4 id="total_expe" class="topic_heading"></h4>
 				<div class="container-fluid experience_dis">
 					<h4>Medical System Company Limited<img src="resources/images/medisys_log.png" height="30px" width="60px"/></h4>
 					<h5>Jr. Programmer</h5>
@@ -118,7 +121,7 @@
 			</div>
 			<!-- Certification -->
 			<div class="container-fluid certification">
-				<h4>Certification</h4>
+				<h4 class="topic_heading">Certification</h4>
 				<div class="container-fluid certification_dis">
 					<div class="row">
 						<div class="col col-sm-4">
@@ -159,18 +162,16 @@
 			</div>
 			<!-- Academic -->
 			<div class="container-fluid academic">
-				<h4>Academic</h4>
+				<h4 class="topic_heading">Academic</h4>
 				<div class="container-fluid academic_dis">
 					<div class="row">
-						<div class="col col-sm-5">
+						<div class="col col-sm-3">
 							<div class="panel">
 								<div class="panel-heading">Master of Science</div>
 								<div class="panel-body">
 									<p>Subject: Physics</p>
 									<p>Session: 2011-2012</p>
-									<p>Registration: 11327084029</p>
-									<p>Roll No: 11327084029</p>
-									<p>Inistitute: Dhaka College, Dhaka</p>
+									<p>Inistitute: Dhaka College</p>
 									<p>University: National University</p>
 									<p>Address: Dhaka, Bangladesh</p>
 									<p>Passing Year: 2012</p>
@@ -178,16 +179,13 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-sm-2"></div>
-						<div class="col col-sm-5">
+						<div class="col col-sm-3">
 							<div class="panel">
 								<div class="panel-heading">Bachelor of Science</div>
 								<div class="panel-body">
 									<p>Subject: Physics</p>
 									<p>Session: 2007-2008</p>
-									<p>Registration: 1226264</p>
-									<p>Roll No: 9197168</p>
-									<p>Inistitute: Govt. Edward College, Pabna</p>
+									<p>Inistitute: Govt. Edward College</p>
 									<p>University: National University</p>
 									<p>Address: Pabna, Dhaka, Bangladesh</p>
 									<p>Passing Year: 20011</p>
@@ -195,17 +193,13 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col col-sm-5">
+						<div class="col col-sm-3">
 							<div class="panel">
 								<div class="panel-heading">Higher Secondary Certificate Examination</div>
 								<div class="panel-body">
 									<p>Group: Science</p>
 									<p>Session: 2005-2006</p>
-									<p>Registration: 858621</p>
-									<p>Roll No: 106893</p>
-									<p>Inistitute: Shahid Bul Bul Govt. College, Pabna</p>
+									<p>Inistitute: Shahid Bul Bul Govt. College</p>
 									<p>Board: Rajshahi Education Board</p>
 									<p>Address: Pabna, Dhaka, Bangladesh</p>
 									<p>Passing Year: 2007</p>
@@ -213,22 +207,19 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-sm-2"></div>
-						<div class="col col-sm-5">
-								<div class="panel">
-									<div class="panel-heading">Secondary School Certificate Examination</div>
-									<div class="panel-body">
-										<p>Group: Science</p>
-										<p>Session: 2003-2004</p>
-										<p>Registration: 836937</p>
-										<p>Roll No: 113932</p>
-										<p>Inistitute: Khatib Abdul Zahid High School</p>
-										<p>Board: Rajshahi Education Board</p>
-										<p>Address: Pabna, Dhaka, Bangladesh</p>
-										<p>Passing Year: 2005</p>
-										<p>Result Publishing Date: July 09, 2005</p>
-									</div>
+						<div class="col col-sm-3">
+							<div class="panel">
+								<div class="panel-heading">Secondary School Certificate Examination</div>
+								<div class="panel-body">
+									<p>Group: Science</p>
+									<p>Session: 2003-2004</p>
+									<p>Inistitute: Khatib Abdul Zahid High School</p>
+									<p>Board: Rajshahi Education Board</p>
+									<p>Address: Pabna, Dhaka, Bangladesh</p>
+									<p>Passing Year: 2005</p>
+									<p>Result Publishing Date: July 09, 2005</p>
 								</div>
+							</div>
 						</div>
 					</div>
 				</div>
