--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				<h4 class="topic_heading">Certification</h4>
 				<div class="container-fluid certification_dis">
 					<div class="row">
-						<div class="col col-sm-4">
+						<div class="col col-xs-12 col-sm-12 col-md-4 col-lg-4">
 							<div class="panel">
 								<div class="panel-heading">Oracle Certified Professional Java SE 6 Programmer</div>
 								<div class="panel-body">
@@ -127,7 +127,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-sm-4">
+						<div class="col col-xs-12 col-sm-12 col-md-4 col-lg-4">
 							<div class="panel">
 								<div class="panel-heading">Enterprise System Analisys and Design (ESAD-J2EE)</div>
 								<div class="panel-body">
@@ -138,7 +138,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-sm-4">
+						<div class="col col-xs-12 col-sm-12 col-md-4 col-lg-4">
 							<div class="panel">
 								<div class="panel-heading">National Skill Standard Basic Course Examination</div>
 								<div class="panel-body">
@@ -157,7 +157,7 @@
 				<h4 class="topic_heading">Academic</h4>
 				<div class="container-fluid academic_dis">
 					<div class="row">
-						<div class="col col-sm-3">
+						<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3">
 							<div class="panel">
 								<div class="panel-heading">Master of Science</div>
 								<div class="panel-body">
@@ -171,7 +171,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-sm-3">
+						<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3">
 							<div class="panel">
 								<div class="panel-heading">Bachelor of Science</div>
 								<div class="panel-body">
@@ -185,7 +185,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-sm-3">
+						<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3">
 							<div class="panel">
 								<div class="panel-heading">Higher Secondary Certificate Examination</div>
 								<div class="panel-body">
@@ -199,7 +199,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-sm-3">
+						<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3">
 							<div class="panel">
 								<div class="panel-heading">Secondary School Certificate Examination</div>
 								<div class="panel-body">
@@ -483,19 +483,19 @@
 		<div id="service" class="container-fluid text-center service">
 			<h4 class="topic_heading">Service</h4>		
 			<div class="container-fluid service_row">
-				<div class="service_col">
+				<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3 service_col">
 					<h4>Enterprise Application</h4>
 					<p>Develop enterprise application with Java and ASP.Net</p>
 				</div>
-				<div class="service_col">
+				<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3 service_col">
 					<h4>Web Development</h4>
 					<p>Web development With ASP.Net and PHP</p>
 				</div>
-				<div class="service_col">
+				<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3 service_col">
 					<h4>Web Design</h4>
 					<p>Design web application wihh AngularJs</p>
 				</div>
-				<div class="service_col">
+				<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3 service_col">
 					<h4>Mobile Application</h4>
 					<p>Andriod application development with Java</p>
 				</div>
@@ -504,13 +504,13 @@
 
 		<!-- Contact -->
 		<div id="contact" class="container-fluid contact_well">
-				<p><i class="fa fa-copyright"></i> mizan.xyz</p>
-				<p><i class="fas fa-globe"></i> https://kmmizanurrahmanjp.github.io</p>
-				<p><i class="fa fa-map-marker"></i> Tejgaon, Dhaka, Bangladesh</p>
-				<p><i class="fa fa-envelope"></i> info@mizan.xyz</p>
-				<p><i class="fa fa-envelope-o"></i> kmmizanurrahmanjp@gmail.com</p>
-				<p> <i class="fa fa-skype"></i> kmmizanurrahmanjp@gmail.com</p>
-				<p><i class="fa fa-phone"></i> +88 01725400435</p>
+			<p><i class="fa fa-copyright"></i> mizan.xyz</p>
+			<p><i class="fas fa-globe"></i> https://kmmizanurrahmanjp.github.io</p>
+			<p><i class="fa fa-map-marker"></i> Tejgaon, Dhaka, Bangladesh</p>
+			<p><i class="fa fa-envelope"></i> info@mizan.xyz</p>
+			<p><i class="fa fa-envelope-o"></i> kmmizanurrahmanjp@gmail.com</p>
+			<p> <i class="fa fa-skype"></i> kmmizanurrahmanjp@gmail.com</p>
+			<p><i class="fa fa-phone"></i> +88 01725400435</p>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
