Responsiv for 410px

--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
 					<ul class="nav navbar-nav navbar-right">
 					  <li class="menu"><a href="#home" ><i class="fa fa-home" style="font-size:24px"></i></a></li>
 					  <li class="menu"><a href="#about" ><i class="fa fa-info" style="font-size:24px"></i></a></li>
+					  <li class="menu"><a href="#cirtification" ><i class="fa fa-certificate" style="font-size:24px"></i></a></li>
+					  <li class="menu"><a href="#academic" ><i class="fa fa-graduation-cap" style="font-size:24px"></i></a></li>
 					  <li class="menu"><a href="#protfolio" ><i class="fa fa-suitcase" style="font-size:24px"></i></a></li>
-					  <li class="menu"><a href="#service" ><i class="fa fa-handshake-o" style="font-size:24px"></i></a></li>
-					  <li class="menu"><a href="#contact" ><i class="fa fa-user" style="font-size:24px"></i></a></li>
-					  
-					  <li class="menu"><a href="#"><i class="fa" style="font-size:24px"></i></a></li>
-					  <li class="menu"><a href="#"><i class="fa" style="font-size:24px"></i></a></li>
+					  <li class="menu"><a href="#contact" ><i class="fa fa-address-card" style="font-size:24px"></i></a></li>
 					  
 					  <li class="icon"><a href="https://www.facebook.com/kmmizanurrahmanjp" target="_blank"><i class="fa fa-facebook-square" style="font-size:24px"></i></a></li>
 					  <li class="icon"><a href="https://bd.linkedin.com/in/kmmizanurrahmanjp" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px"></i></a></li>
@@ -44,8 +42,7 @@
 					  <li class="icon"><a href="https://plus.google.com/+kmmizanurrahmanjp" target="_blank"><i class="fa fa-google-plus-square" style="font-size:24px"></i></a></li>
 					  <li class="icon"><a href="https://www.instagram.com/kmmizanurrahmanjp" target="_blank"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
 					  <li class="icon"><a href="https://github.com/kmmizanurrahmanjp" target="_blank"><i class="fa fa-github-square" style="font-size:24px"></i></a></li>
-					  <li class="icon"><a href="https://bitbucket.org/kmmizanurrahmanjp" target="_blank"><i class="fa fa-bitbucket-square" style="font-size:24px"></i></a></li>
-						<li class="icon"><a href="https://www.youracclaim.com/user/kmmizanurrahmanjp" target="_blank"><i class="fa fa-font" style="font-size:24px"></i></a></li>
+					  <li class="icon"><a href="https://www.youracclaim.com/user/kmmizanurrahmanjp" target="_blank"><i class="fa fa-font" style="font-size:24px"></i></a></li>
 					  <li class="icon"><a href="https://stackoverflow.com/story/kmmizanurrahmanjp" target="_blank"><i class="fa fa-stack-overflow" style="font-size:24px"></i></a></li>
 					</ul>
 				  </div>
@@ -98,21 +95,23 @@
 			<!-- Experience -->
 			<div class="container-fluid experience">
 				<h4 id="total_expe" class="topic_heading"></h4>
-				<div class="container-fluid experience_dis">
-					<h4>Medical System Company Limited<img src="resources/images/medisys_logo.png" height="30px" width="60px"/></h4>
-					<h5>Jr. Programmer</h5>
-					<h6>JavaEE & IHE Team</h6>
-					<h6>March 1, 2017 to preasent</h6>
-					<p id="medisys_expe"></p>
-					<p>Responsibility: Team mate of development team for <strong>Hospital Management Information System</strong>. Developed with 
-						<strong>IHE</strong>, <strong>HL7 v2.3</strong>, <strong>Spring Boot</strong>, <strong>MyBatis</strong>, <strong>Oracle</strong>, <strong>ExtJs</strong>, <strong>Tomcat</strong>, <strong>Maven</strong>, <strong>Ant</strong>, <strong>Git</strong>, <strong>Bitbucket</strong>, <strong>Jira</strong>, <strong>Liqibase</strong> and many more.
-					</p>
-					<p>Website: <a href="http://medisys.com.sa" target="_blank">http://medisys.com.sa</a></p> 
-					<p>Address: Software Technology Park@Janata Tower, 10th Floor, Kawran Bazar, Dhaka-1215, Telephone : +88-488 100 10, Postal address : P O Box 2197, Dhaka-1000 Bangladesh.</p>
+				<div class="well well-lg">
+					<div class="container-fluid experience_dis">
+						<h4>Medical System Company Limited<img src="resources/images/medisys_logo.png" height="30px" width="60px"/></h4>
+						<h5>Assistant Programmer</h5>
+						<h6>JavaEE & IHE Team</h6>
+						<h6>March 1, 2017 to preasent</h6>
+						<p id="medisys_expe"></p>
+						<p>Responsibility: Team mate of development team for <strong>Hospital Management Information System</strong>. Developed with 
+							<strong>IHE</strong>, <strong>HL7 v2.3</strong>, <strong>Spring Boot</strong>, <strong>MyBatis</strong>, <strong>Oracle</strong>, <strong>ExtJs</strong>, <strong>Tomcat</strong>, <strong>Maven</strong>, <strong>Ant</strong>, <strong>Git</strong>, <strong>Bitbucket</strong>, <strong>Jira</strong>, <strong>Liqibase</strong> and many more.
+						</p>
+						<p>Website: <a href="http://medisys.com.sa" target="_blank">http://medisys.com.sa</a></p> 
+						<p>Address: Software Technology Park@Janata Tower, 10th Floor, Kawran Bazar, Dhaka-1215, Telephone : +88-488 100 10, Postal address : P O Box 2197, Dhaka-1000 Bangladesh.</p>
+					</div>
 				</div>
 			</div>
 			<!-- Certification -->
-			<div class="container-fluid certification">
+			<div  id="cirtification" class="container-fluid certification">
 				<h4 class="topic_heading">Certification</h4>
 				<div class="container-fluid certification_dis">
 					<div class="row">
@@ -153,7 +152,7 @@
 				</div>
 			</div>
 			<!-- Academic -->
-			<div class="container-fluid academic">
+			<div id="academic" class="container-fluid academic">
 				<h4 class="topic_heading">Academic</h4>
 				<div class="container-fluid academic_dis">
 					<div class="row">
@@ -479,28 +478,7 @@
 			</div>
 		</div>
 
-		<!-- Service -->
-		<div id="service" class="container-fluid text-center service">
-			<h4 class="topic_heading">Service</h4>		
-			<div class="container-fluid service_row">
-				<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3 service_col">
-					<h4>Enterprise Application</h4>
-					<p>Develop enterprise application with Java and ASP.Net</p>
-				</div>
-				<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3 service_col">
-					<h4>Web Development</h4>
-					<p>Web development With ASP.Net and PHP</p>
-				</div>
-				<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3 service_col">
-					<h4>Web Design</h4>
-					<p>Design web application wihh AngularJs</p>
-				</div>
-				<div class="col col-xs-12 col-sm-6 col-md-6 col-lg-3 service_col">
-					<h4>Mobile Application</h4>
-					<p>Andriod application development with Java</p>
-				</div>
-			</div>
-		</div>
+		
 
 		<!-- Contact -->
 		<div id="contact" class="container-fluid contact_well">
