Modify home background image

--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
 
 		<!-- Home-->
 		<div id="home" class="container-fluid home">
-		  <div class="container-fluid">
-				<div class="img_medisys">
-						<img src="resources/images/medisys_home.jpg"  class="img-circle" height="100%" width="100%"/>
-				</div>
+			<div class="home_background">
+				<img src="resources/images/home_background.jpg" height="100%" width="100%"/>
+			</div>
+		  
+				
 				<div class="img_ocjp">
 						<img src="resources/images/ocjp_home.gif" height="100%" width="100%"/>
 				</div>
-			</div>
+			
 		</div>
 
 		<!-- About-->
