modify menu and footer

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					  <span class="icon-bar"></span>
 					  <span class="icon-bar"></span>                        
 				  </button>
-				  <a class="navbar-brand name" href="#">MD. MIZANUR RAHMAN</a>
-				  <a class="navbar-brand degination" href="#">Programmer</a>
+				  <a class="navbar-brand name" href="#home">MD. MIZANUR RAHMAN</a>
+				  <a class="navbar-brand degination" href="#home">Programmer</a>
 				</div>
 				<div>
 				  <div class="collapse navbar-collapse" id="myNavbar">
@@ -38,7 +38,6 @@
 					  <li class="icon"><a href="https://www.facebook.com/kmmizanurrahmanjp" target="_blank"><i class="fa fa-facebook-square" style="font-size:24px"></i></a></li>
 					  <li class="icon"><a href="https://bd.linkedin.com/in/kmmizanurrahmanjp" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px"></i></a></li>
 					  <li class="icon"><a href="https://twitter.com/mizan_pabna" target="_blank"><i class="fa fa-twitter-square" style="font-size:24px"></i></a></li>
-					  <li class="icon"><a href="https://plus.google.com/+kmmizanurrahmanjp" target="_blank"><i class="fa fa-google-plus-square" style="font-size:24px"></i></a></li>
 					  <li class="icon"><a href="https://www.instagram.com/kmmizanurrahmanjp" target="_blank"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
 					  <li class="icon"><a href="https://github.com/kmmizanurrahmanjp" target="_blank"><i class="fa fa-github-square" style="font-size:24px"></i></a></li>
 					  <li class="icon"><a href="https://www.youracclaim.com/user/kmmizanurrahmanjp" target="_blank"><i class="fa fa-font" style="font-size:24px"></i></a></li>
