--- a/index.html
+++ b/index.html
@@ -1,199 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>MIZAN</title>
-		<meta name="description" content="Personal Profile for Md. Mizanur Rahman"/>
-		<meta name="keywords" content="Md. Mizanur Rahman, Mizanur Rahman, Mizan"/>
-		<meta name="author" content="Mizan"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<link rel="icon" type="image/png" sizes="16x16" href="resources/favicon/favicon-16x16.png">
-		<link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="resources/css/bootstrap-theme.css" rel="stylesheet" type="text/css">
-		<link href="resources/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-		<link href="resources/css/style.css" rel="stylesheet" type="text/css">
-		<script src="resources/js/angular.min.js" type="text/javascript"></script>
-		<script src="resources/js/angular-route.min.js" type="text/javascript"></script>
-		<script src="resources/js/jquery.min.js" type="text/javascript"></script>
-		<script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
-		<script src="resources/js/script.js" type="text/javascript"></script>
-	</head>
-	<body ng-app = "mainApp">
-	
-		<!-- Navbar  -->
-		<div class="container-fluid">
-			<nav class="navbar navbar-inverse navbar-fixed-top navbar-modify">
-			  <div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-					  <span class="icon-bar"></span>
-					  <span class="icon-bar"></span>
-					  <span class="icon-bar"></span>                        
-				  </button>
-				  <a class="navbar-brand name" href="#home">MD. MIZANUR RAHMAN</a>
-				  <a class="navbar-brand degination" href="#home">Programmer</a>
-				</div>
-				<div>
-				  <div class="collapse navbar-collapse" id="myNavbar">
-					<ul class="nav navbar-nav navbar-right">
-					  <li class="icon"><a href="https://www.facebook.com/kmmizanurrahmanjp" target="_blank"><i class="fa fa-facebook-square" style="font-size:24px"></i></a></li>
-					  <li class="icon"><a href="https://bd.linkedin.com/in/kmmizanurrahmanjp" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px"></i></a></li>
-					  <li class="icon"><a href="https://twitter.com/mizan_pabna" target="_blank"><i class="fa fa-twitter-square" style="font-size:24px"></i></a></li>
-					  <li class="icon"><a href="https://www.instagram.com/kmmizanurrahmanjp" target="_blank"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
-					  <li class="icon"><a href="https://github.com/kmmizanurrahmanjp" target="_blank"><i class="fa fa-github-square" style="font-size:24px"></i></a></li>
-					  <li class="icon"><a href="https://www.youracclaim.com/user/kmmizanurrahmanjp" target="_blank"><i class="fa fa-font" style="font-size:24px"></i></a></li>
-					  <li class="icon"><a href="https://stackoverflow.com/story/kmmizanurrahmanjp" target="_blank"><i class="fa fa-stack-overflow" style="font-size:24px"></i></a></li>
-					</ul>
-				  </div>
-				</div>
-			  </div>
-			</nav>    
-		</div>
-	
-        <div class = "container-fluid content-container">
-			<div class = "container-fluid content-left">
-				<img src="resources/images/baner01.jpg" alt="Mizan_01"/>
-			</div>
-			<div class = "container-fluid content-right">
-				<!-- Menu  -->
-				<div class = "container-fluid content-menu">
-					<ul>
-						<li class="menu"><a href="#home" ><i class="fa fa-home" style="font-size:24px"></i></a></li>
-					    <li class="menu"><a href="#experience" ><i class="fa fa-info-circle" style="font-size:24px"></i></a></li>
-					    <li class="menu"><a href="#cirtification" ><i class="fa fa-certificate" style="font-size:24px"></i></a></li>
-					    <li class="menu"><a href="#academic" ><i class="fa fa-graduation-cap" style="font-size:24px"></i></a></li>
-					    <li class="menu"><a href="#protfolio" ><i class="fa fa-tasks" style="font-size:24px"></i></a></li>
-					    <li class="menu"><a href="#cv" ><i class="fa fa-file-pdf-o" style="font-size:24px"></i></a></li>
-						<li class="menu"><a href="#galary" ><i class="fa fa-image" style="font-size:24px"></i></a></li>
-					</ul>
-				</div>
-				<div class = "container-fluid content" ng-view></div>
-			</div>
-        </div>
-		
-		<!-- Contact -->
-		<div class="container-fluid contact_well">
-			<p><i class="fa fa-copyright"></i> mizan.xyz</p>
-			<p><i class="fas fa-globe"></i> https://kmmizanurrahmanjp.github.io</p>
-			<p><i class="fa fa-map-marker"></i> Tejgaon, Dhaka, Bangladesh</p>
-			<p><i class="fa fa-envelope"></i> info@mizan.xyz</p>
-			<p><i class="fa fa-envelope-o"></i> kmmizanurrahmanjp@gmail.com</p>
-			<p> <i class="fa fa-skype"></i> kmmizanurrahmanjp@gmail.com</p>
-			<p><i class="fa fa-phone"></i> +88 01725400435</p>
-		</div>
-		
-		
-		<!-- Routing part-->
-		
-		<!-- Home Description -->
-		<script type = "text/ng-template" id = "home">
-			<div class="container-fluid home_dis">
-				<div class="home_dis_p">
-					<p ng-repeat="aboutDescription in aboutDescriptions">{{aboutDescription.descriptionBlock}}</p>
-				</div>
-			</div>
-		 </script>
-	 
-		 <!-- Experience -->
-		 <script type = "text/ng-template" id = "experience">
-			<div class="container-fluid experience">
-				<div class="well well-lg" ng-repeat="experience in experiences">
-					<div class="container-fluid experience_dis">
-						<h4>{{experience.organization}}<img src="{{experience.logo}}" height="30px" width="60px"/></h4>
-						<h5>{{experience.designation}}</h5>
-						<h6>{{experience.team}}</h6>
-						<h6>{{experience.duration}}</h6>
-						<p id="medisys_expe"></p>
-						<p>Responsibility: {{experience.responsibility}}</p>
-						<p>Website: <a href="{{experience.website}}" target="_blank">{{experience.website}}</a></p> 
-						<p>Address: {{experience.address}}</p>
-					</div>
-				</div>
-			</div>
-		 </script>
-	 
-		 <!-- Certification -->
-		 <script type = "text/ng-template" id = "cirtification">
-			<div  id="cirtification" class="container-fluid certification">
-				<div class="container-fluid certification_dis">
-					<div class="row">
-						<div class="col col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-repeat="cirtification in cirtifications">
-							<div class="panel">
-								<div class="panel-heading">{{cirtification.name}} -> {{cirtification.type}}</div>
-								<div class="panel-body">
-									<p>{{cirtification.organization}}</p>
-									<p>{{cirtification.duration}}</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		 </script>
-	 
-		 <!-- Academic -->
-		 <script type = "text/ng-template" id = "academic">
-			<div id="academic" class="container-fluid academic">
-				<div class="container-fluid academic_dis">
-					<div class="row">
-						<div class="col col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-repeat="academic in academics">
-							<div class="panel">
-								<div class="panel-heading">{{academic.description}}</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		 </script>
-	 
-		 <!-- Protfolio -->
-		 <script type = "text/ng-template" id = "protfolio">
-			<div id="protfolio" class="container-fluid protfolio">
-				<div class="container-fluid protfolio_dis">
-					<div class="well well-lg" ng-repeat="protfolio in protfolios">
-						<div class="row">
-							<div class="col col-sm-5">
-								<p class="protfolio_dis_application">{{protfolio.application}}</p>
-								<p class="protfolio_dis_profile">{{protfolio.profile}}</p>
-								<p class="protfolio_dis_app_dis">{{protfolio.description}}</p>
-							</div>
-							<div class="col col-sm-1 protfolio_icons">
-								<div class="dropdown">
-									<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-										<i class="fa fa-gears" ></i><span class="caret"></span>
-									</button>
-									<ul class="dropdown-menu" >
-										<li ng-repeat="technology in protfolio.technologies">{{technology.name}}</li>
-									</ul>
-								</div>
-							</div>
-							<div class="col col-sm-2"></div>
-							<div class="col col-sm-1 protfolio_icons"><i class="fa fa-group"></i> {{protfolio.member}}</div>
-							<div class="col col-sm-2"></div>
-							<div class="col col-sm-1 protfolio_icons"><a href="{{protfolio.url}}" target="_blank"><i class="fa fa-location-arrow"></i></a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</script>
-	 
-		<!-- CV -->
-		<script type = "text/ng-template" id = "cv">
-			<div class="container-fluid cv">
-				<embed src="resources/file/cv/mizan_cv_7.0.1.pdf" type="application/pdf"/>
-			</div>
-		</script>
-	 
-		<!-- Galary -->
-		<script type = "text/ng-template" id = "galary">
-			<div class="container-fluid galary">
-				<div class="row" >
-					<div class="col-md-3" ng-repeat="galary in galarys">
-					  <div class="thumbnail">
-						  <img src="{{galary.src}}" alt="{{galary.alt}}" style="width:100%">
-					  </div>
-					</div>
-				</div>
-			</div>
-		</script>
-   </body>
-</html>
+<head>
+</head>
+<body><script>window.location.replace("http://mizan.xyz");</script></body>
