--- a/index.html
+++ b/index.html
@@ -2,4 +2,11 @@
 <html lang="en">
 <head>
 </head>
-<body><script>window.location.replace("http://mizan.xyz");</script></body>
+<body>
+  <div>
+		<h3 style="text-align: center;">MD MIZANUR RAHMAN</h3>
+	</div>
+	<div>
+		<h3>This website is in revision. Please try another day or you can see some information about me in <a href="https://www.facebook.com/kmmizanurrahmanjp">Facebook</a></h3>
+	</div>  
+</body>
